Copy Fix and Install Instructions
-updated gitignore
-updated readme to reflect new install instructions

--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,6 @@
 *.lo
 *.o
 *.obj
+*.pdb
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-
-# Executables
-*.exe
-*.out
-*.app
