Full Restructure and Bug Fixes
-Hidden Leap header and private implementation from UClasses
-Fixed image stability, will now correctly resize when requested.
-R8 texture no longer causes memory leaks
-Added Gesture sub-classes and corresponding events (e.g. Swipe Gesture
Detected). Will allow for easy determination of direction and other
properties of gestures. You can also cast general gesture detection to
the correct sub-class gesture.
-Added own category of logging, pay attention to log output to help you
with debugging errors.

--- a/Plugins/LeapMotion/LeapMotion.uplugin
+++ b/Plugins/LeapMotion/LeapMotion.uplugin
@@ -3,18 +3,19 @@
 	
 	"FriendlyName" : "Leap Motion Plugin",
 	"Version" : 1,
-	"VersionName" : "0.7",
-	"CreatedBy" : "Fork: Getnamo, Original: Marc Wieser",
+	"VersionName" : "0.7.1",
+	"CreatedBy" : "Getnamo",
 	"CreatedByURL" : "https://github.com/getnamo/leap-ue4",
-	"EngineVersion" : 1579795,
-	"Description" : "Plugin binding the Leap Motion in an event driven architecture, exposed to blueprint.",
+	"EngineVersion" : "4.5.0",
+	"Description" : "Plugin binding the Leap Motion in an event driven architecture, exposed to blueprint. Forked from Mark Wieser's original UE4-LeapMotionPlugin.",
 	"Category" : "Input.Controller",
 	
     "Modules" :
 	[
 		{
 			"Name" : "LeapMotion",
-			"Type" : "Runtime"
+			"Type" : "Runtime",
+			"WhitelistPlatforms" : [ "Win64", "Win32" ]
 		}
 	]
 }
