--- a/Plugins/LeapMotion/LeapMotion.uplugin
+++ b/Plugins/LeapMotion/LeapMotion.uplugin
@@ -3,19 +3,19 @@
 	
 	"FriendlyName" : "Leap Motion Plugin",
 	"Version" : 4,
-	"VersionName" : "0.8.3",
+	"VersionName" : "0.9.0",
 	"CreatedBy" : "Getnamo",
 	"CreatedByURL" : "https://github.com/getnamo/leap-ue4",
-	"EngineVersion" : "4.6",
+	"EngineVersion" : "4.7+",
 	"Description" : "Plugin binding the Leap Motion in an event driven architecture, exposed to blueprint. Forked from Mark Wieser's original UE4-LeapMotionPlugin.",
 	"Category" : "Input.Controller",
-	
-    "Modules" :
+	"Modules" :
 	[
 		{
 			"Name" : "LeapMotion",
 			"Type" : "Runtime",
 			"WhitelistPlatforms" : [ "Win64", "Win32", "Mac" ]
 		}
-	]
+	],
+	"CanContainContent" : true
 }
