Commenting pass for engine integration
-All API now commented to UE standards
-Timestamp exposed in frame

--- a/Plugins/LeapMotion/LeapMotion.uplugin
+++ b/Plugins/LeapMotion/LeapMotion.uplugin
@@ -14,7 +14,7 @@
 		{
 			"Name" : "LeapMotion",
 			"Type" : "Runtime",
-			"WhitelistPlatforms" : [ "Win64", "Win32", "Mac" ]
+			"WhitelistPlatforms" : [ "Win64", "Win32" ]
 		}
 	],
 	"CanContainContent" : true
