--- a/Plugins/LeapMotion/LeapMotion.uplugin
+++ b/Plugins/LeapMotion/LeapMotion.uplugin
@@ -1,21 +1,23 @@
 {
     "FileVersion" : 3,
-	
-	"DisplayName" : "Leap Motion Plugin",
-	"Version" : 20,
-	"VersionName" : "1.0.0",
+	"Version" : 1,
+	"VersionName" : "2.0.0",
+	"FriendlyName" : "Leap Motion Plugin",
+	"Description" : "Support for the Leap Motion input device",
+	"Category" : "Input Devices",
 	"CreatedBy" : "Getnamo",
-	"CreatedByURL" : "https://github.com/getnamo/leap-ue4",
-	"EngineVersion" : "4.10+",
-	"Description" : "Plugin binding the Leap Motion in an event driven architecture, exposed to blueprint. Forked from Mark Wieser's original UE4-LeapMotionPlugin.",
-	"Category" : "Input.Controller",
+	"CreatedByURL" : "https://www.leapmotion.com/",
+	"DocsURL" : "https://github.com/getnamo/leap-ue4",
+	"EnabledByDefault" : true,
+	"IsBetaVersion" : false,
+	"CanContainContent" : true,
 	"Modules" :
 	[
 		{
 			"Name" : "LeapMotion",
 			"Type" : "Runtime",
+			"LoadingPhase" : "Default",
 			"WhitelistPlatforms" : [ "Win64", "Win32" ]
 		}
-	],
-	"CanContainContent" : true
+	]
 }
